--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: dist
+          path: /dist
   deploy:
     name: Deploy
     needs: build
@@ -29,9 +29,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2.3.2
       - name: Download Artifact
+        uses: actions/download-artifact@v2
         with:
           name: build
-          path: dist
+          path: /dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
