--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,11 +25,11 @@ jobs:
         run: npm run build
 
       - name: Set Firebase Token
-        run: echo "FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN_DEV }}" >> $GITHUB_ENV
+        run: echo "FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN }}" >> $GITHUB_ENV
         if: github.ref == 'refs/heads/dev'
 
       - name: Set Firebase Token
-        run: echo "FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN_STAGE }}" >> $GITHUB_ENV
+        run: echo "FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN }}" >> $GITHUB_ENV
         if: github.ref == 'refs/heads/stage'
 
       - name: Set Firebase Token
