--- a/.firebaserc
+++ b/.firebaserc
@@ -2,6 +2,7 @@
   "projects": {
     "default": "cicd-96724",
     "main": "cicd-96724",
-    "dev": "dev-cicd-d24d3"
+    "dev": "dev-cicd-d24d3",
+    "stage": "cicd-96724"
   }
 }
