--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "cicd-96724",
-    "main": "cicd-96724",
-    "dev": "dev-cicd-d24d3",
-    "stage": "cicd-96724"
+    "default": "cicd-96724"
   }
 }
