--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,20 @@
 {
   "projects": {
     "default": "cicd-96724"
+  },
+  "targets": {
+    "CICD": {
+      "hosting": {
+        "stage": [
+          "cicd-96724"
+        ],
+        "dev": [
+          "dev-cicd-d24d3"
+        ],
+        "main": [
+          "cicd-96724"
+        ]
+      }
+    }
   }
 }
