--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -118,7 +118,7 @@ jobs:
           npm firebase deploy --only hosting -P dev --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
 
         ## Build & Deploy Production
-      - name: Build & Deploy Main (Production)
+      - name: Build & Deploy Main
         if: github.ref == 'refs/heads/main'
         run: |
           npm build
