--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,8 +42,7 @@ jobs:
       # - uses: FirebaseExtended/action-hosting-deploy@v0
       - uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
-            # repoToken: "${{ secrets.GITHUB_TOKEN }}"
-            # firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_CICD_AUTOMATION }}"
-            # channelId: live
-            # projectId: test-ci-cd-automation
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}'
+          channelId: live
+          projectId: cicd-96724
