--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,14 +20,14 @@ jobs:
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
         run: |
-          npm build
+          npm run build
           npm firebase target:apply hosting dev
           npm firebase deploy --only hosting -P dev --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
 
       - name: Build & Deploy stage
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/stage'
         run: |
-          npm build
+          npm run build
           npm firebase target:apply hosting stage
           npm firebase deploy --only hosting -P stage --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
 
@@ -35,14 +35,14 @@ jobs:
       - name: Build & Deploy Main
         if: github.ref == 'refs/heads/main'
         run: |
-          npm build
+          npm run build
           npm firebase target:apply hosting main
           npm firebase deploy --only hosting -P main --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
 
       # - uses: FirebaseExtended/action-hosting-deploy@v0
       - uses: w9jds/firebase-action@master
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}"
           channelId: live
           projectId: cicd-96724
