--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: npm install
         run: |
           npm install
+      - name: install firebase cli
+        run: | 
+          npm install -g firebase-tools
 
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
