--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,8 +17,11 @@ jobs:
         run: |
           npm install
       - name: install firebase cli
-        run: | 
+        run: |
           npm install -g firebase-tools
+
+      - name: Firebase Login
+        run: firebase login:ci --no-localhost --token "${{ secrets.FIREBASE_TOKEN }}"
 
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
