--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
           npm install -g firebase-tools
 
       - name: Firebase Login
-        run: firebase login --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: firebase login --no-localhost --token "${{ secrets.FIREBASE_TOKEN }}"
 
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
