--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,16 +13,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
 
-      - name: npm install
-        run: |
-          npm install
-      - name: install firebase cli
-        run: |
-          npm install -g firebase-tools
-
-      - name: Firebase Login  
-        run: firebase login --interactive --token "${{ secrets.FIREBASE_TOKEN }}"
-  
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
         run: |
@@ -45,8 +35,8 @@ jobs:
           npm firebase target:apply hosting main
           npm firebase deploy --only hosting -P main --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
 
-      # - uses: FirebaseExtended/action-hosting-deploy@v0
-      - uses: w9jds/firebase-action@master
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+      # - uses: w9jds/firebase-action@master
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}"
