--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
 
+            ## Install dependencies
+      - name: yarn install
+        run: |
+          yarn
+
       - name: Build & Deploy Dev
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
         run: |
