--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,36 +14,39 @@ jobs:
       - run: npm ci && npm run build
 
             ## Install dependencies
-      - name: yarn install
+      - name: npm install
         run: |
           yarn
 
       - name: Build & Deploy Dev
+        uses: w9jds/firebase-action@master
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
-        run: |
-          npm run build
-          npm firebase target:apply hosting dev
-          npm firebase deploy --only hosting -P dev --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
       - name: Build & Deploy stage
+        uses: w9jds/firebase-action@master
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/stage'
-        run: |
-          npm run build
-          npm firebase target:apply hosting stage
-          npm firebase deploy --only hosting -P stage --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
         ## Build & Deploy Production
       - name: Build & Deploy Main
+        uses: w9jds/firebase-action@master
         if: github.ref == 'refs/heads/main'
-        run: |
-          npm run build
-          npm firebase target:apply hosting main
-          npm firebase deploy --only hosting -P main --token ${{ secrets.FIREBASE_TOKEN }} --message "$CI_FIREBASE_MESSAGE"
-
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-      # - uses: w9jds/firebase-action@master
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}"
-          channelId: live
-          projectId: cicd-96724
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+
+      # - uses: FirebaseExtended/action-hosting-deploy@v0
+      # # - uses: w9jds/firebase-action@master
+      #   with:
+      #     repoToken: "${{ secrets.GITHUB_TOKEN }}"
+      #     firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TOKEN }}"
+      #     channelId: live
+      #     projectId: cicd-96724
