--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: w9jds/firebase-action@master
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting:dev
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
@@ -30,7 +30,7 @@ jobs:
         uses: w9jds/firebase-action@master
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/stage'
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting:stage
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
@@ -39,7 +39,7 @@ jobs:
         uses: w9jds/firebase-action@master
         if: github.ref == 'refs/heads/main'
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting:main
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
