--- a/.firebaserc
+++ b/.firebaserc
@@ -10,6 +10,9 @@
         ],
         "dev": [
           "dev-cicd-d24d3"
+        ],
+        "stage": [
+          "stage-cid"
         ]
       }
     }
