--- a/.firebaserc
+++ b/.firebaserc
@@ -12,7 +12,7 @@
           "dev-cicd-d24d3"
         ],
         "stage": [
-          "stage-cid"
+          "stage-cicd-96724"
         ]
       }
     }
