--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,14 +23,16 @@ jobs:
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/dev'
         with:
           args: deploy --only hosting:dev
-       
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
       - name: Build & Deploy stage
         uses: w9jds/firebase-action@master
         if: contains(github.ref, 'refs/heads/feature/') || github.ref == 'refs/heads/stage'
         with:
           args: deploy --only hosting:stage
-       
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
         ## Build & Deploy Production
       - name: Build & Deploy Main
@@ -38,6 +40,8 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           args: deploy --only hosting:main
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
       # - uses: FirebaseExtended/action-hosting-deploy@v0
       # # - uses: w9jds/firebase-action@master
